<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
                android:background="@mipmap/image1"
    tools:context="com.example.asus.bluetooth.TextActivity">
    <RelativeLayout
        android:id="@+id/title_text"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/back"
            android:src="@mipmap/back"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="使用说明"
            android:textColor="#000000"
            android:textSize="30sp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/textView" />
    </RelativeLayout>
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_below="@+id/title_text"
       android:orientation="vertical"
       android:layout_marginTop="20dp"
       android:layout_marginLeft="20dp"
       android:layout_marginRight="20dp">

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/lanya"
           android:textSize="20sp"
           android:textColor="#000000"
           android:layout_marginBottom="10dp"/>
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textSize="20sp"
           android:textColor="#000000"
           android:text="@string/connect"
           android:layout_marginBottom="10dp"/>
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textSize="20sp"
           android:textColor="#000000"
           android:text="@string/all"
           android:layout_marginBottom="10dp"/>
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textSize="20sp"
           android:textColor="#000000"
           android:text="@string/timing"
           android:layout_marginBottom="10dp"/>
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textSize="20sp"
           android:textColor="#000000"
           android:text="@string/cycle"
           android:layout_marginBottom="10dp"/>
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textSize="20sp"
           android:textColor="#000000"
           android:text="@string/valve"
           android:layout_marginBottom="10dp"/>
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textSize="20sp"
           android:textColor="#000000"
           android:text="@string/open"
           android:layout_marginBottom="10dp"/>
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textSize="20sp"
           android:textColor="#000000"
           android:text="@string/off"/>
   </LinearLayout>
</RelativeLayout>
