<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FCFCFC"
    tools:context=".MainActivity">

    <include
        android:id="@+id/activity_title"
        layout="@layout/title" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_below="@id/activity_title"
        android:src="@mipmap/image" />

    <GridView
        android:id="@+id/grid_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/image"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:horizontalSpacing="10dp"
        android:listSelector="#FFFFFF"
        android:numColumns="4" />

    <LinearLayout
        android:id="@+id/ll_dingshi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/grid_button"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1.0"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/send_message"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@mipmap/dingshi2" />

            <TextView
                android:id="@+id/send_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/send_text"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_marginLeft="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_mactime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/mac_time"
                android:textColor="#000000"
                android:textSize="18sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/get_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text=""
                android:textColor="#000000" />

            <TextView
                android:id="@+id/get_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text=""
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1.0"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/timing"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@mipmap/dingshi2" />

            <TextView
                android:id="@+id/timing_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/take_time"
                android:textColor="#000000" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_dingshi"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <ImageView
                android:id="@+id/hy1"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@mipmap/hybroff1" />

            <ImageView
                android:id="@+id/hy2"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@mipmap/hybroff1" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linear"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="1阀门"
                android:textColor="#000000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="2阀门"
                android:textColor="#000000" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linear1"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <ImageView
                android:id="@+id/hy3"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@mipmap/hybroff1" />

            <ImageView
                android:id="@+id/hy4"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@mipmap/hybroff1" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linear2"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="3阀门"
                android:textColor="#000000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="4阀门"
                android:textColor="#000000" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/root"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/lin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:background="#F0F0F0"
        android:gravity="bottom|end"
        android:orientation="horizontal"
        android:weightSum="4">

        <Button
            android:id="@+id/bluetooth"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:text="蓝牙"
            android:textColor="#000000" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#E5E5E5" />

        <Button
            android:id="@+id/connect"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:text="连接"
            android:textColor="#000000" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#E5E5E5" />

        <Button
            android:id="@+id/hybr_all"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:text="全部"
            android:textColor="#000000" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#E5E5E5" />

        <Button
            android:id="@+id/app_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:text="使用说明"
            android:textColor="#000000" />

    </LinearLayout>
</RelativeLayout>
